DIAM-1446: Investigated and fixed other relevant issue. Original issue is not relevant as logic functions as expected.

--- a/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.html.twig
@@ -1,3 +1,5 @@
+{% set init = get_password_reset_link('') %}
+
 <!-- Inliner Build Version 4380b7741bb759d6cb997545f3add21ad48f010b -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="color: #222; background: #FFF; margin: 0; padding: 0;">
@@ -14,7 +16,7 @@
             <table cellspacing="0" cellpadding="0" style="width: 100%; margin: 0; padding: 0;">
               <tr>
                 <td class="logo" style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0 0 50px;" align="left" valign="top">
-                  <img src="{{ app.request.scheme ~'://' ~ app.request.httpHost ~ asset('bundles/diamantefront/img/logo.png') }}" alt="DiamanteDesk" height="52" width="280" />
+                  <img src="{{ url("oro_default", {}, true) ~ asset('bundles/diamantefront/img/logo.png') }}" alt="DiamanteDesk" height="52" width="280" />
                 </td>
               </tr>
               <tr>
