--- a/Resources/public/js/app/templates/actions/automation-actions-collection-template.ejs
+++ b/Resources/public/js/app/templates/actions/automation-actions-collection-template.ejs
@@ -1,15 +1,13 @@
-<div class="control-group">
-    <div class="control-label wrap">
-        <label for="automation-actions-name">Actions</label>
-    </div>
-    <div class="actions-list">
+<div class="control-label wrap">
+    <label for="automation-actions-name">Actions</label>
+</div>
+<div class="actions-list">
 
-    </div>
-    <div class="pull-right">
-        <div class="btn-group">
-            <button type="button" class="btn btn-success" data-action="add">
-                Add Action
-            </button>
-        </div>
+</div>
+<div class="actions-buttons pull-right">
+    <div class="btn-group">
+        <button type="button" class="btn btn-success" data-action="add-item">
+            Add Action
+        </button>
     </div>
 </div>
