DIAM-1345 nesting ability for conditions collections

--- a/Resources/public/css/less/main.less
+++ b/Resources/public/css/less/main.less
@@ -1,5 +1,10 @@
 @import "mixins";
 
+#automation-conditions,
+#automation-actions {
+  .clearfix();
+}
+
 .actions-list,
 .conditions-list {
   > div {
