--- a/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -1,5 +1,5 @@
 <div class="controls">
-    <select name="actions[name]">
+    <select name="actions[name]" data-attr="name" data-rel-attr="entity,property,value">
         <% for(var key in config.actions) { %>
         <option value="<%= key %>"<%= key == name ? ' selected' : ''%>><%= config.actions[key].label %></option>
         <% } %>
@@ -7,15 +7,15 @@
     <% if(name == 'update_property'){ %>
         <% var entities = config.entities; %>
         <span>Of:</span>
-        <select name="actions[entity]">
+        <select name="actions[entity]" data-attr="entity"  data-rel-attr="property,value">
             <% for(var key in entities) { %>
             <option value="<%= key %>"<%= key == entity ? ' selected' : ''%>><%= entities[key].label %></option>
             <% } %>
         </select>
         <% if(entity){ %>
-        <% var properties = entities[entity].properties %>
+        <% var properties = entities[entity].properties; %>
         <span>Set: </span>
-        <select name="actions[property]">
+        <select name="actions[property]" data-attr="property" data-rel-attr="value">
             <% for(var key in properties) { %>
             <option value="<%= key %>"<%= key == property ? ' selected' : ''%>><%= properties[key].label %></option>
             <% } %>
@@ -24,9 +24,9 @@
         <% if(property){ %>
             <span>To: </span>
             <% if(properties[property].type == 'string'){ %>
-                <input type="text" name="actions[value]" value="<%= value %>" />
+                <input type="text" name="actions[value]" data-attr="value" value="<%= value %>" />
             <% } else if (properties[property].frontend_options){ %>
-                <select name="actions[value]">
+                <select name="actions[value]" data-attr="value">
                     <% for(var key in properties[property].frontend_options) { %>
                     <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
                         <%= properties[property].frontend_options[key] %>
@@ -38,7 +38,7 @@
     <% } %>
     <% if(name == 'notify_by_email'){ %>
         <span>To: </span>
-        <input type="text" name="actions[value]" value="<%= value %>" />
+        <input type="text" name="actions[value]" data-attr="value" value="<%= value %>" />
     <% } %>
     <div class="pull-right">
         <div class="btn-group">
