--- a/Resources/public/css/less/main.less
+++ b/Resources/public/css/less/main.less
@@ -1,7 +1,6 @@
 @import "mixins";
 
-#automation-conditions,
-#automation-actions {
+.diam-automation .control-group {
   .clearfix();
 }
 
@@ -15,8 +14,8 @@
   }
 }
 
-.conditions-list {
-  .control-group {
+.grouping-children-list {
+  > .control-group {
     border: 3px rgba(#ccc, .5) solid;
     border-radius: 5px;
     padding: 5px;
