--- a/Resources/views/Automation/edit.html.twig
+++ b/Resources/views/Automation/edit.html.twig
@@ -32,7 +32,7 @@
         config : config,
         type : type
     } %}
-    <div class="diam-automation"
+    <div class="diam-automation container-fluid"
          data-page-component-module="diamanteautomation/js/app/components/automation-component"
          data-page-component-options="{{ options|json_encode }}"></div>
 
