fix form handle

--- a/Resources/public/js/app/templates/automation-template.ejs
+++ b/Resources/public/js/app/templates/automation-template.ejs
@@ -1,4 +1,4 @@
-<input type="hidden" name="rule" value="">
+<input type="hidden" name="diamante_automation_update_rule_form[rule]" value="">
 <div class="control-group">
     <div class="control-label wrap">
         <label for="automation-name" class="required">Name<em>*</em></label>
