--- a/Resources/views/Automation/edit.html.twig
+++ b/Resources/views/Automation/edit.html.twig
@@ -35,5 +35,6 @@
     <div class="diam-automation container-fluid"
          data-page-component-module="diamanteautomation/js/app/components/automation-component"
          data-page-component-options="{{ options|json_encode }}"></div>
+    {{ form_row(form._token) }}
 
 {% endblock content_data %}
