--- a/Resources/views/Automation/edit.html.twig
+++ b/Resources/views/Automation/edit.html.twig
@@ -30,7 +30,8 @@
     {% set id = 'automation-form' %}
     {% set options  = {
         config : config,
-        type : type
+        type : type,
+        edit : true
     } %}
     <div class="diam-automation container-fluid"
          data-page-component-module="diamanteautomation/js/app/components/automation-component"
