--- a/Resources/public/js/app/templates/actions/automation-actions-collection-template.ejs
+++ b/Resources/public/js/app/templates/actions/automation-actions-collection-template.ejs
@@ -4,6 +4,7 @@
 <div class="actions-list">
 
 </div>
+<% if(edit){ %>
 <div class="actions-buttons pull-right">
     <div class="btn-group">
         <button type="button" class="btn btn-success" data-action="add-item">
@@ -11,3 +12,4 @@
         </button>
     </div>
 </div>
+<% } %>
