--- a/Resources/views/Automation/view.html.twig
+++ b/Resources/views/Automation/view.html.twig
@@ -31,7 +31,7 @@
     {% set options  = {
         config : config,
         type : type,
-        model : rule,
+        model : model,
         edit : false
     } %}
     <div class="diam-automation container-fluid"
