--- a/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -1,21 +1,18 @@
+<% 'TEMPLATE: automation-actions-edit-template' %>
 <% var entities = config.entities; %>
 <% var entity = typeof entity !== 'undefined' && entity; %>
 <% var properties = !!entity && entities[entity].properties; %>
 <% var property = typeof property !== 'undefined' && property; %>
 <% var value = typeof value !== 'undefined' && value; value = value ? value : ''; %>
 <div class="controls">
-    <select name="actions[type]" data-attr="type" data-rel-attr="entity,property,value">
+    <select name="actions[type]" data-attr="type" data-rel-attr="property,value">
         <% for(var key in config.actions) { %>
         <option value="<%= key %>"<%= key == type ? ' selected' : ''%>><%= config.actions[key].label %></option>
         <% } %>
     </select>
     <% if(type == 'update_property'){ %>
         <span>Of:</span>
-        <select name="actions[entity]" data-attr="entity"  data-rel-attr="property,value">
-            <% for(var key in entities) { %>
-            <option value="<%= key %>"<%= key == entity ? ' selected' : ''%>><%= entities[key].label %></option>
-            <% } %>
-        </select>
+        <strong><%= entities[entity].label %></strong>
         <% if(properties){ %>
         <span>Set: </span>
         <select name="actions[property]" data-attr="property" data-rel-attr="value">
