--- a/Resources/public/js/app/templates/automation-edit-template.ejs
+++ b/Resources/public/js/app/templates/automation-edit-template.ejs
@@ -1,3 +1,6 @@
+<% 'TEMPLATE: automation-edit-template' %>
+<% var entities = config.entities; %>
+<% var time_intervals = config.time_intervals; %>
 <input type="hidden" name="diamante_automation_update_rule_form[rule]" value="">
 <div class="control-group">
     <div class="control-label wrap">
@@ -14,12 +17,24 @@
     </div>
     <div class="controls">
         <select name="timeInterval"  data-attr="timeInterval" id="automation-timeInterval">
-        <% for(var key in config.time_intervals) { %>
+        <% for(var key in time_intervals) { %>
         <option value="<%= key %>"<%= key == timeInterval ? ' selected' : ''%>><%= config.time_intervals[key] %></option>
         <% } %>
         </select>
     </div>
 </div>
 <% } %>
+<div class="control-group">
+    <div class="control-label wrap">
+        <label for="automation-target" class="required">Target<em>*</em></label>
+    </div>
+    <div class="controls">
+        <select name="target" data-attr="target" id="automation-target">
+            <% for(var key in entities) { %>
+            <option value="<%= key %>"<%= key == target ? ' selected' : ''%>><%= entities[key].label %></option>
+            <% } %>
+        </select>
+    </div>
+</div>
 <div id="automation-conditions"></div>
 <div id="automation-actions"></div>
