--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/form.ejs
@@ -14,6 +14,12 @@
                id="last_name" name="last_name"
                value="<%= last_name %>">
   </div>
+    <div class="form-group">
+        <label class="control-label" for="email">Email</label>
+        <input type="text" class="form-control"
+               id="email" name="email"
+               value="<%= email %>" readonly>
+    </div>
   <div class="form-group">
     <label class="control-label" for="last_name">New Password</label>
     <input type="password" class="form-control"
