--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/User/main.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/User/main.less
@@ -1,3 +1,117 @@
+.user-wrapper {
+  margin: 40px 0 0;
+  position: relative;
+  height: 40px;
+  .user-actions {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    .user-action {
+      display: block;
+    }
+
+    .user-edit {
+      color: #fff;
+      display: inline-block;
+      border-radius: 20px;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 40px;
+      width: 40px;
+      vertical-align: bottom;
+      z-index: 2;
+      -webkit-transition: right .3s ease-out;
+      transition: right .3s ease-out;
+      .fa {
+        opacity: 0;
+        text-align: center;
+        font-size: 24px;
+        line-height: 40px;
+        height: 40px;
+        width: 40px;
+        vertical-align: bottom;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        -webkit-transition: opacity .2s ease-out;
+        transition: opacity .2s ease-out;
+      }
+      &:before {
+        content: '';
+        background: #000;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 40px;
+        width: 40px;
+      }
+      img.offline {
+        display: none;
+        & + .fa {
+          opacity: .7;
+          background: #000;
+        }
+      }
+    }
+
+    .user-logout {
+      color: #fff;
+      background: #47747e;
+      border-radius: 20px;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 40px;
+      width: 40px;
+      text-align: right;
+      -webkit-transition: width .3s ease-out;
+      transition: width .3s ease-out;
+      .fa {
+        opacity: .5;
+        text-align: center;
+        font-size: 24px;
+        line-height: 40px;
+        height: 40px;
+        width: 40px;
+        float:left;
+        vertical-align: bottom;
+        -webkit-transition: opacity .2s ease-out;
+        transition: opacity .2s ease-out;
+      }
+      &:hover {
+        .fa {
+          opacity: 1;
+        }
+      }
+    }
+
+    &:hover {
+      .user-edit {
+        &:before {
+          opacity: .7;
+        }
+        .fa {
+          opacity: .5;
+        }
+        &:hover {
+          .fa {
+            opacity: 1;
+          }
+        }
+      }
+      .user-logout {
+        width: 80px;
+      }
+    }
+  }
+}
+
+
 .profile{
   .loading {
     display: inline-block;
